# AI_solo_coder_task_B_110

./: .dockerignore  .env.example  README.md  docker-compose.yml  test5.txt
backend/: .env  Cargo.toml  Dockerfile  final_test.txt  full_test_output.txt  test1.txt  test_output.txt  test_output_new.txt  test_results.txt
backend/config/: catalog.json  eclipse.json  horoscope.json  instrument.json  matching.json  precession.json  variable.json
backend/src/: catalog_loader.rs  config.rs  coordinate_transformer.rs  db.rs  eclipse.rs  eclipse_predictor.rs  horoscope.rs  instrument.rs  instrument_calibrator.rs  main.rs  models.rs  public_engagement.rs  telemetry.rs  transient_matcher.rs  variability_analyzer.rs  variable_star.rs
backend/src/astronomy/: constants.rs  mod.rs  precession.rs
backend/src/matching/: bayes.rs  mod.rs
backend/static/: index.html
backend/static/css/: style.css
backend/static/js/: api.js  app.js  astro.js  star_chart_3d.js  transient_panel.js  ui.js
database/scripts/: 01_init_schema.sql  02_spatial_optimizations.sql  seed_data.py
database/simulator/: dynasty_config.py  requirements.txt  run_simulation.py  star_generator.py  transient_generator.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  eclipse.js  eclipse_predictor.js  horoscope.js  instrument.js  instrument_calibrator.js  public_engagement.js  starfield.js  ui.js  variability_analyzer.js  variable.js
simulator/: dtu_simulator.py
